package com.example.app.engine.io;

/**
 * Generic actions (not context-specific).
 * Bind these to keys/buttons in InputBinding.
 */
public enum InputAction {
    CONFIRM,
    BACK,
    PAUSE,

    MOVE_LEFT,
    MOVE_RIGHT,
    MOVE_UP,
    MOVE_DOWN,
    ACTION_1,
    ACTION_2
}
