package com.example.app.engine.movement;

/**
 * Generic 2D velocity.
 */
public final class VelocityComponent {
    public float vx, vy;

    public VelocityComponent(float vx, float vy) {
        this.vx = vx;
        this.vy = vy;
    }
}
